--- a/frontend/pages/discovery/discovery.wxss
+++ b/frontend/pages/discovery/discovery.wxss
@@ -203,3 +203,15 @@
   height: 100%;
   width: 100%;
 }
+
+.select_one{
+ color:#4995fa;
+  text-align: center;
+  background-color:rgb(239, 239, 239);
+  width:676rpx;
+  height:100rpx;
+  line-height:100rpx;
+  margin-top: 5px;
+  margin-left: 15px;
+  border-bottom:2rpx solid rgb(255, 255, 255);
+}
