--- a/frontend/pages/discovery/discovery.wxss
+++ b/frontend/pages/discovery/discovery.wxss
@@ -205,13 +205,30 @@
 }
 
 .select_one{
- color:#4995fa;
-  text-align: center;
-  background-color:rgb(239, 239, 239);
+ color:#ffffff;
+  text-align: left;
+  background-color:rgb(180, 180, 239);
   width:676rpx;
-  height:100rpx;
-  line-height:100rpx;
+  height:300rpx;
+  line-height:70rpx;
   margin-top: 5px;
-  margin-left: 15px;
+  margin-left: 20px;
   border-bottom:2rpx solid rgb(255, 255, 255);
+}
+.select_two{
+ color:#ffffff;
+  text-align: left;
+  background-color:rgb(200, 180, 220);
+  width:676rpx;
+  height:300rpx;
+  line-height:70rpx;
+  margin-top: 5px;
+  margin-left: 20px;
+  border-bottom:2rpx solid rgb(255, 255, 255);
+}
+.usermotto1 {
+  color:#000;
+}
+.userp {
+  text-align: right;
 }
