--- a/frontend/pages/mine/mine.wxss
+++ b/frontend/pages/mine/mine.wxss
@@ -13,7 +13,6 @@
   border: 3px solid #66bbe9;
 }
 .nickname{
-  text-align: center;
   position: absolute;
   left: 20rpx;
   top: 20rpx;
@@ -37,4 +36,63 @@
 }
 .sm-img{
   margin-right: 10rpx;
+}
+.progress {
+  margin-bottom: 10px;
+  align-items: flex-end;
+  color:#4995fa;
+  }
+  .dakadays{
+ color:#4995fa;
+  text-align: center;
+  background-color:rgb(239, 239, 239);
+  width:676rpx;
+  height:100rpx;
+  line-height:100rpx;
+  margin-top: 5px;
+  margin-left: 20px;
+  border-bottom:2rpx solid rgb(255, 255, 255);
+}
+.dk_btn{
+	width: 70%;
+	height: 100rpx;
+	border-radius: 2em;
+	line-height: 100rpx;
+	color: #fff;
+	font-size: 32rpx;
+	background: #4995fa;
+	position: relative;
+	top: 30rpx;
+}
+
+.dk_nav{
+  	position: relative;
+	  top: 60rpx;
+    color: #4995fa;
+    display: flex;
+    justify-content: center;
+    margin-top: 24rpx;
+
+}
+.dk_result{
+  position: relative;
+	  top: 80rpx;
+	font-size: 60rpx;
+	color: #97989c;
+	display: flex;
+	justify-content: center;
+	margin-top: 24rpx;
+}
+.dk_result .dk_result_success text{
+	color: #fa5659;
+	margin-right: 5rpx;
+}
+.dk_result .dk_result_error text{
+	color: #42c787;
+	margin-right: 5rpx;
+}
+.dk_result .dk_result_line{
+	margin-left: 16rpx;
+	margin-right: 16rpx;
+	color: #ddd;
 }
